# ethos

./: docker-compose.yml  middleware.ts
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f81691e70be_add_resource_kind_to_curation_items.py  5063b7a8f605_initial_schema.py  68ffd1e9ad10_add_profile_banner_url.py  a1c2e3f40abc_add_account_newsletter_resource_kinds.py  b2d3e4f51bcd_add_social_item_type.py  c3e4f5061cde_add_platform_item_types.py  d4e5f6072def_add_curation_item_sort_order.py
backend/app/: config.py  db.py  deps.py  errors.py  main.py  seed.py
backend/app/models/: __init__.py  analytics_event.py  base.py  curation_item.py  follow.py  link_preview_cache.py  profile.py  save.py  user.py
backend/app/routers/: analytics.py  auth.py  discover.py  follows.py  items.py  link_preview.py  profiles.py  saves.py
backend/app/schemas/: auth.py  discover.py  item.py  link_preview.py  profile.py
backend/app/services/: link_preview.py  uploads.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AboutSection.tsx  AuthModal.tsx  CommunityBanner.tsx  CurationCard.tsx  Dashboard.tsx  DiscoverProfileCard.tsx  ExplorePage.tsx  FAQSection.tsx  FeaturedBanner.tsx  FeaturesGrid.tsx  Footer.tsx  FooterCTA.tsx  HandleAvailabilityBadge.tsx  HandlePage.tsx  Hero.tsx  Highlights.tsx  ImageCropModal.tsx  IntegrationCloud.tsx  InteractiveFeatures.tsx  Navbar.tsx  NetworkShowcase.tsx  OwnershipSection.tsx  Pagination.tsx  (+7 more)
(+20 files in other folders)
