[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "fastapi[standard]>=0.139.2",
    "google-auth>=2.56.2",
    "httpx>=0.28.1",
    "pillow>=12.3.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.51.0",
]
